--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SIGAM
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.47.jar=${src.dir}\assets\mysql\mysql-connector-java-8.0.17.jar
+file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
+file.reference.mysql-connector-java-5.1.47.jar-1=mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
