--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ dist.jlink.output=${dist.jlink.dir}/SIGAM
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
+file.reference.KControls.jar-1=KControls.jar
 file.reference.mysql-connector-java-5.1.47.jar-1=mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
@@ -45,7 +46,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar-1}
+    ${file.reference.mysql-connector-java-5.1.47.jar-1}:\
+    ${file.reference.KControls.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -86,7 +88,7 @@ main.class=view.FormSecretario
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
