--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ excludes=
 file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
 file.reference.KControls.jar-1=KControls.jar
 file.reference.mysql-connector-java-5.1.47.jar-1=mysql-connector-java-5.1.47.jar
+file.reference.SwingMaterialDesign.jar=SwingMaterialDesign.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,6 +48,7 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.mysql-connector-java-5.1.47.jar-1}:\
+    ${file.reference.SwingMaterialDesign.jar}:\
     ${file.reference.KControls.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
