--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -90,7 +90,7 @@ main.class=view.FormSecretario
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
