Adicionando pacotes jasperreport

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SIGAM
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=jasperreport/commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=jasperreport/commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=jasperreport/commons-digester-1.7.jar
+file.reference.commons-logging-1.1.jar=jasperreport/commons-logging-1.1.jar
+file.reference.groovy-all-1.5.5.jar=jasperreport/groovy-all-1.5.5.jar
+file.reference.itext-2.1.7.jar=jasperreport/itext-2.1.7.jar
+file.reference.jasperreports-6.6.0.jar=jasperreport/jasperreports-6.6.0.jar
 file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
 file.reference.KControls.jar-1=KControls.jar
 file.reference.mysql-connector-java-5.1.47.jar-1=mysql-connector-java-5.1.47.jar
@@ -49,7 +56,14 @@ javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.mysql-connector-java-5.1.47.jar-1}:\
     ${file.reference.SwingMaterialDesign.jar}:\
-    ${file.reference.KControls.jar-1}
+    ${file.reference.KControls.jar-1}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-1.5.5.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-6.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
