Arrumando bug da mensagem no warningPanel e arrumando os nomes.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,8 +71,7 @@ javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
