--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,8 +45,8 @@ file.reference.groovy-all-1.5.5.jar=jasperreport/groovy-all-1.5.5.jar
 file.reference.itext-2.1.7.jar=jasperreport/itext-2.1.7.jar
 file.reference.jasperreports-6.6.0.jar=jasperreport/jasperreports-6.6.0.jar
 file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
-file.reference.KControls.jar-1=KControls.jar
 file.reference.mysql-connector-java-5.1.47.jar-1=mysql-connector-java-5.1.47.jar
+file.reference.Sliding.jar=C:\\Users\\abner\\Documents\\NetBeansProjects\\Sliding\\dist\\Sliding.jar
 file.reference.SwingMaterialDesign.jar=SwingMaterialDesign.jar
 includes=**
 jar.compress=false
@@ -56,14 +56,14 @@ javac.classpath=\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.mysql-connector-java-5.1.47.jar-1}:\
     ${file.reference.SwingMaterialDesign.jar}:\
-    ${file.reference.KControls.jar-1}:\
     ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-1.7.jar}:\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.groovy-all-1.5.5.jar}:\
     ${file.reference.itext-2.1.7.jar}:\
-    ${file.reference.jasperreports-6.6.0.jar}
+    ${file.reference.jasperreports-6.6.0.jar}:\
+    ${file.reference.Sliding.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -103,7 +103,7 @@ main.class=view.FormSecretario
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
