--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,6 @@ file.reference.itext-2.1.7.jar=jasperreport/itext-2.1.7.jar
 file.reference.jasperreports-6.6.0.jar=jasperreport/jasperreports-6.6.0.jar
 file.reference.jcalendar-1.3.3.jar=jcalendar-1.3.3.jar
 file.reference.mysql-connector-java-5.1.47.jar-1=mysql-connector-java-5.1.47.jar
-file.reference.Sliding.jar=C:\\Users\\abner\\Documents\\NetBeansProjects\\Sliding\\dist\\Sliding.jar
 file.reference.SwingMaterialDesign.jar=SwingMaterialDesign.jar
 includes=**
 jar.compress=false
@@ -62,8 +61,7 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.groovy-all-1.5.5.jar}:\
     ${file.reference.itext-2.1.7.jar}:\
-    ${file.reference.jasperreports-6.6.0.jar}:\
-    ${file.reference.Sliding.jar}
+    ${file.reference.jasperreports-6.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -99,7 +97,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SIGAM
-main.class=view.FormSecretario
+main.class=view.LoginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
