dashboard 2.0 (pai ta chato) jFreeChart

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -99,7 +99,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SIGAM
-main.class=view.FormSecretario
+main.class=view.LoginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
